frontend-practice/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-practice
  labels:
    app: frontend-practice
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend-practice
  template:
    metadata:
      labels:
        app: frontend-practice
    spec:
      containers:
        - name: frontend
          image: frontend-practice:v2
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 80
