frontend-practice/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
spec:
  selector:
    app: frontend-practice
  ports:
    - port: 80
      targetPort: 80
